--- a/bootstrap.html
+++ b/bootstrap.html
@@ -656,419 +656,92 @@
     </div>
 
 
-    <section class="section-image-top-position mt-3 ">
-
-        <div class="text-align-center-top">
-
-            <div class="display-flex-aney-top">
-
-                <div class="SliderTopImage Fade ">
-
-                    <div class="imageSlider background-image-1">
-
-                        <div class="Words-slider-top">
-
-                            <div class="words-sliders-top">
-
-                                <h1 class="h1-slider-top text-white">Our slogan</h1>
-                                <h2 class="h22-slider-top text-white-50">el-trip</h2>
-                                <h3 class="h33-slider-top text-muted">Make</h3>
-                                <h3 class="h333-slider-top text-info">customers</h3>
-                                <p class="p-slider-top text-white">We've been established 13 years, giving us plenty of
-                                    time to perfect
-                                    our service In that time we've grown from 115 sales to over 7000 with full warranty
-                                </p>
-                                <button id="link-click-slider-top"><a href="#" id="link-click-slider">contact
-                                        now</a></button>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <div class="SliderTopImage Fade " style="display: none;">
-
-                    <div class="Words-slider-top">
-
-                        <div class="imageSlider background-image-2">
-
-                            <div class="Words-slider-top">
-
-                                <div class="words-sliders-top ">
-
-                                    <h1 class="h1-slider-top text-white">Our slogan</h1>
-                                    <h2 class="h22-slider-top text-white-50">el-trip</h2>
-                                    <h3 class="h33-slider-top text-muted">Make</h3>
-                                    <h3 class="h333-slider-top text-info">customers</h3>
-                                    <p class="p-slider-top text-white"> </p>
-                                    <button id="link-click-slider-top"><a href="#" id="link-click-slider">REGISTER
-                                            NOW</a></button>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <div class="SliderTopImage Fade" style="display: none;">
-
-                    <div class="Words-slider-top">
-
-                        <div class="imageSlider background-image-3">
-
-                            <div class="Words-slider-top">
-
-                                <div class="words-sliders-top">
-
-                                    <h1 class="h1-slider-top text-white">Our slogan</h1>
-                                    <h2 class="h22-slider-top text-white-50">el-trip</h2>
-                                    <h3 class="h33-slider-top text-muted">Make</h3>
-                                    <h3 class="h333-slider-top text-info">customers</h3>
-                                    <p class="p-slider-top text-white">Make an Impression Cars for every budget
-                                        We have a dedicated procurement team working around the clock to make sure you
-                                        always get the best deals......
-                                        our service In that time we've grown from 115 sales to over 7000 with full
-                                        warranty</p>
-                                    <button id="link-click-slider-top"><a href="#" id="link-click-slider">contact
-                                            now</a></button>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <scetion id="sectionClickSlider">
-
-                    <div id="clickHer" class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <button onclick="afterClick(1)" class="btn btn-primary me-md-2" type="button">Button</button>
-                        <button onclick="afterClick(2)" class="btn btn-primary" type="button">Button</button>
-                        <button onclick="afterClick(3)" class="btn btn-primary" type="button">Button</button>
-                    </div>
-
-                </scetion>
-
-
-            </div>
-
-        </div>
-
-    </section>
-
-    <div class="filter-meta">
-
-        <span class="this-span">style :</span>
-
-        <ul class="row">
-
-            <div class="col-lg-2 col-md-4 col-sm-6 text-center">
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-1.png" alt="">
-                        <p>micro</p>
-                    </a></li>
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-2.png" alt="">
-                        <p>Hatchback</p>
-                    </a></li>
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-3.png" alt="">
-                        <p>Coupe</p>
-                    </a></li>
-
-            </div>
-
-            <div class="col-lg-2 col-md-4 col-sm-6 text-center">
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-4.png" alt="">
-                        <p>CUV</p>
-                    </a></li>
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-5.png" alt="">
-                        <p>SUV</p>
-                    </a></li>
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-6.png" alt="">
-                        <p>Cabriolet</p>
-                    </a></li>
-
-            </div>
-
-            <div class="col-lg-2 col-md-4 col-sm-6  text-center">
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-7.png" alt="">
-                        <p>Super Car</p>
-                    </a></li>
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-8.png" alt="">
-                        <p>Pickup</p>
-                    </a></li>
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-9.png" alt="">
-                        <p>Van</p>
-                    </a></li>
-
-            </div>
-
-            <div class="col-lg-2 col-md-4 col-sm-6 text-center">
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-10.png" alt="">
-                        <p>Caravan</p>
-                    </a></li>
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-8.png" alt="">
-                        <p>Pickup</p>
-                    </a></li>
-
-                <li><a href="#" title=""><img calss="img-fluid" src="img/mockup-9.png" alt="">
-                        <p>Van</p>
-                    </a></li>
-
-            </div>
-
+    <!DOCTYPE html>
+    <html>
+
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            * {
+                box-sizing: border-box;
+            }
+
+            #myInput {
+                background-image: url('/css/searchicon.png');
+                background-position: 10px 12px;
+                background-repeat: no-repeat;
+                width: 100%;
+                font-size: 16px;
+                padding: 12px 20px 12px 40px;
+                border: 1px solid #ddd;
+                margin-bottom: 12px;
+            }
+
+            #myUL {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+            }
+
+            #myUL li a {
+                border: 1px solid #ddd;
+                margin-top: -1px;
+                /* Prevent double borders */
+                background-color: #f6f6f6;
+                padding: 12px;
+                text-decoration: none;
+                font-size: 18px;
+                color: black;
+                display: block
+            }
+
+            #myUL li a:hover:not(.header) {
+                background-color: #eee;
+            }
+        </style>
+    </head>
+
+    <body>
+
+        <h2>My Phonebook</h2>
+
+        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+
+        <ul id="myUL">
+            <li><a href="#">Adele</a></li>
+            <li><a href="#">Agnes</a></li>
+
+            <li><a href="#">Billy</a></li>
+            <li><a href="#">Bob</a></li>
+
+            <li><a href="#">Calvin</a></li>
+            <li><a href="#">Christina</a></li>
+            <li><a href="#">Cindy</a></li>
         </ul>
-    </div>
 
-    <div class="filtermeta block-flex">
+        <script>
+            function myFunction() {
+                var input, filter, ul, li, a, i, txtValue;
+                input = document.getElementById("myInput");
+                filter = input.value.toUpperCase();
+                ul = document.getElementById("myUL");
+                li = ul.getElementsByTagName("li");
+                for (i = 0; i < li.length; i++) {
+                    a = li[i].getElementsByTagName("a")[0];
+                    txtValue = a.textContent || a.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        li[i].style.display = "";
+                    } else {
+                        li[i].style.display = "none";
+                    }
+                }
+            }
+        </script>
 
-        <span class="this-span">Additional:</span>
+    </body>
 
-        <form method="post" class="row">
+    </html>
 
-            <div class="col-lg-4 col-md-6 col-sm-9">
-                <label class="checkboxses">ABS
-                    <input type="checkbox" checked="checked">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Cruise control
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Front fog lights
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Alarm
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Electric door mirrors
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-9">
-                <label class="checkboxses"> Heated door mirrors
-                    <input type="checkbox" checked="checked">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Audio remote control
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Electrically drivers seat
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Passenger airbag
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Bluetooth connection
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-9">
-                <label class="checkboxses"> Folding rear seats
-                    <input type="checkbox" checked="checked">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">ear electric windows
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Climate control
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Front electric windows
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-                <label class="checkboxses">Remote central locking
-                    <input type="checkbox">
-                    <span class="checkmark1"></span>
-                </label>
-            </div>
-        </form>
-
-
-    </div>
-
-    <section class="blogs-image">
-
-        <div class="row">
-
-            <div class="col-sm-6 col-md-4 col-lg-3">
-
-                <div class="box mb-3 bg-white" data-work="Our slogan Don't just take our word for it. We're rated at 9.7/10 on independent,
-                review website TrustPilot, from over 4,000
-                genuine customer reviews. el-trip Make customers">
-
-                    <i class="fa-solid fa-user-tie" style="font-size: 100px;"></i>
-
-                </div>
-
-            </div>
-
-            <div class="col-sm-6 col-md-4 col-lg-3">
-
-                <div class="box mb-3 bg-white" data-work="Application">
-
-                    <i class="fa-solid fa-user-tie" style="font-size: 100px;"></i>
-
-                </div>
-
-            </div>
-
-            <div class="col-sm-6 col-md-4 col-lg-3">
-
-                <div class="box mb-3 bg-white" data-work="Application">
-
-                    <i class="fa-solid fa-user-tie" style="font-size: 100px;"></i>
-
-                </div>
-
-            </div>
-
-            <div class="col-sm-6 col-md-4 col-lg-3">
-
-                <div class="box mb-3 bg-white" data-work="Application">
-
-                    <i class="fa-solid fa-user-tie" style="font-size: 100px;"></i>
-
-                </div>
-
-            </div>
-
-            <div class="col-sm-6 col-md-4 col-lg-3">
-
-                <div class="box mb-3 bg-white" data-work="Application">
-
-                    <i class="fa-solid fa-user-tie" style="font-size: 100px;"></i>
-
-                </div>
-
-            </div>
-
-            <div class="col-sm-6 col-md-4 col-lg-3">
-
-                <div class="box mb-3 bg-white" data-work="Application">
-
-                    <i class="fa-solid fa-user-tie" style="font-size: 100px;"></i>
-
-                </div>
-
-            </div>
-
-            <div class="col-sm-6 col-md-4 col-lg-3">
-
-                <div class="box mb-3 bg-white" data-work="Application">
-
-                    <i class="fa-solid fa-user-tie" style="font-size: 100px;"></i>
-
-                </div>
-
-            </div>
-
-            <div class="col-sm-6 col-md-4 col-lg-3">
-
-                <div class="box mb-3 bg-white" data-work="Application">
-
-                    <i class="fa-solid fa-user-tie" style="font-size: 100px;"></i>
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </section>
-
-    <div class="sub-head blackish">
-        <div class="bg-image position-relative">
-            <img src="img/subhead-bg.jpg" class="img-fluid width-99">
-
-            <div class="conteainer amovement position-absolute">
-                <div class="row this-width-n">
-
-                    <div class="col-lg-4 col-md-6 col-sm-6 d-flex d-w-imp-s">
-                        <h4 class="text-white">Maria Grey</h4>
-                        <p class="text-white">( Cambridge )</p>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 col-sm-6 d-w-imp-l">
-                        <a href="#" title="" class=" text-white theme-btnn"><i class="fa fa-share-alt"></i>share
-                            profile</a>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 col-sm-6 d-w-imp-ls">
-                        <a href="#" class="text-white d-inherit" title="">how does this work</a>
-                        <a href="#" class="text-white d-inherit" title="">submit your car</a>
-                        <i class="fa fa-phone  text-white"></i>
-                        <span class="text-white">call (012) 345 - 6789</span>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <select class="form-select bg-primary bg-gradient bg-opacity-25" aria-label="Default select example">
-        <option selected>Open this select menu</option>
-        <option>london</option>
-        <option>galaxco</option>
-        <option>local city</option>
-    </select>
-
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="img/car-1.jpg" alt="First slide">
-            </div>
-            <div class="item">
-                <img src="img/car-2.jpg" alt="Second slide">
-            </div>
-            <div class="item">
-                <img src="img/car-3.jpg" alt="Third slide">
-            </div>
-        </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span
-                class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span
-                class="sr-only">Previous</span></a>
-
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span
-                class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span
-                class="sr-only">Next</span></a>
-    </div>
 
     <footer class=" footer-bootstrap-v5 mt-5">
 
