--- a/googelmap.html
+++ b/googelmap.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="./img/steering-wheel-icon.svg">
 
     <title>Simple Map</title>
 </head>
