--- a/Models-Cars.html
+++ b/Models-Cars.html
@@ -17,6 +17,235 @@
     <link rel="stylesheet" href="css/Arabic.css">
     <script src="js/jquery.js" type="text/javascript"></script>
     <title>Models-Cars</title>
+    <style>
+        .wrapper {
+            position: relative;
+            height: 400px;
+            width: 650px;
+            overflow: hidden;
+            background: #fff;
+            border: 7px solid #fff;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+            transform: translate(3%, 0);
+        }
+
+        .images,
+        .images-1,
+        .images-2,
+        .images-3,
+        .images-4 {
+            height: 100%;
+            width: 100%;
+            display: flex;
+        }
+
+        .amendmentImage {
+            width: 100%;
+            height: 100%;
+        }
+
+        .images .img-1 {
+            height: 100%;
+            width: 100%;
+            background: url("./img/slider-images-1.jpg") no-repeat;
+        }
+
+        .images .img-2 {
+            position: absolute;
+            height: 100%;
+            width: 50%;
+            background: url("./img/slider-images-2.avif") no-repeat;
+        }
+
+        .images-1 .img-3 {
+            height: 100%;
+            width: 100%;
+            /* background: url("./img/slider-images-33.jpg") no-repeat; */
+        }
+
+        .images-1 .img-4 {
+            position: absolute;
+            height: 100%;
+            width: 50%;
+            background: url("./img/slider-images-4.jpg") no-repeat;
+        }
+
+        .images-2 .img-5 {
+            height: 100%;
+            width: 100%;
+            background: url("./img/slider-images-5.jpeg") no-repeat;
+        }
+
+        .images-2 .img-6 {
+            position: absolute;
+            height: 100%;
+            width: 50%;
+            background: url("./img/slider-images-6.jpeg") no-repeat;
+        }
+
+        .images-3 .img-7 {
+            height: 100%;
+            width: 100%;
+            /* background: url("./img/slider-images-7.jpeg") no-repeat; */
+        }
+
+        .images-3 .img-8 {
+            position: absolute;
+            height: 100%;
+            width: 50%;
+            background: url("./img/slider-images-8.jpeg") no-repeat;
+        }
+
+        .images-4 .img-9 {
+            height: 100%;
+            width: 100%;
+            /* background: url("./img/slider-images-9.jpg") no-repeat; */
+        }
+
+        .images-4 .img-10 {
+            position: absolute;
+            height: 100%;
+            width: 50%;
+            background: url("./img/slider-images-10.jpg") no-repeat;
+        }
+
+        .slider,
+        .slider-1,
+        .slider-2,
+        .slider-3,
+        .slider-4 {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: 99;
+        }
+
+        .slider input,
+        .slider-1 input,
+        .slider-2 input,
+        .slider-3 input,
+        .slider-4 input {
+            width: 100%;
+            outline: none;
+            background: none;
+            appearance: none;
+        }
+
+        .slider input::-webkit-slider-thumb,
+        .slider-1 input::-webkit-slider-thumb,
+        .slider-2 input::-webkit-slider-thumb,
+        .slider-3 input::-webkit-slider-thumb,
+        .slider-4 input::-webkit-slider-thumb {
+            height: 486px;
+            width: 3px;
+            background: none;
+            -webkit-appearance: none;
+            cursor: col-resize;
+        }
+
+        .slider .drag-line,
+        .slider-1 .drag-line-1,
+        .slider-2 .drag-line-2,
+        .slider-3 .drag-line-3,
+        .slider-4 .drag-line-4 {
+            width: 3px;
+            height: 486px;
+            position: absolute;
+            left: 49.85%;
+            pointer-events: none;
+        }
+
+        .slider .drag-line::before,
+        .slider .drag-line::after,
+        .slider-1 .drag-line-1::before,
+        .slider-1 .drag-line-1::after,
+        .slider-2 .drag-line-2::before,
+        .slider-2 .drag-line-2::after,
+        .slider-3 .drag-line-3::before,
+        .slider-3 .drag-line-3::after,
+        .slider-4 .drag-line-4::before,
+        .slider-4 .drag-line-4::after {
+            position: absolute;
+            content: "";
+            width: 100%;
+            height: 222px;
+            background: #fff;
+        }
+
+        .slider .drag-line::before,
+        .slider-1 .drag-line-1::before,
+        .slider-2 .drag-line-2::before,
+        .slider-4 .drag-line-4::before,
+        .slider-4 .drag-line-4::before {
+            top: 0;
+        }
+
+        .slider .drag-line::after,
+        .slider-1 .drag-line-1::after,
+        .slider-2 .drag-line-2::after,
+        .slider-3 .drag-line-3::after,
+        .slider-4 .drag-line-4::after {
+            bottom: 0;
+        }
+
+        .slider .drag-line span,
+        .slider-1 .drag-line-1 span,
+        .slider-2 .drag-line-2 span,
+        .slider-3 .drag-line-3 span,
+        .slider-4 .drag-line-4 span {
+            height: 42px;
+            width: 42px;
+            border: 3px solid #fff;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .slider .drag-line span::before,
+        .slider .drag-line span::after,
+        .slider-1 .drag-line-1 span::before,
+        .slider-1 .drag-line-1 span::after,
+        .slider-2 .drag-line-2 span::before,
+        .slider-2 .drag-line-2 span::after,
+        .slider-3 .drag-line-3 span::before,
+        .slider-3 .drag-line-3 span::after,
+        .slider-4 .drag-line-4 span::before,
+        .slider-4 .drag-line-4 span::after {
+            position: absolute;
+            content: "";
+            top: 50%;
+            border: 10px solid transparent;
+            border-bottom-width: 0px;
+            border-right-width: 0px;
+            transform: translate(-50%, -50%) rotate(45deg);
+        }
+
+        .slider .drag-line span::before,
+        .slider-1 .drag-line-1 span::before,
+        .slider-2 .drag-line-2 span::before,
+        .slider-3 .drag-line-3 span::before,
+        .slider-4 .drag-line-4 span::before {
+            left: 40%;
+            border-left-color: #fff;
+        }
+
+        .slider .drag-line span::after,
+        .slider-1 .drag-line-1 span::after,
+        .slider-2 .drag-line-2 span::after,
+        .slider-3 .drag-line-3 span::after,
+        .slider-4 .drag-line-4 span::after {
+            left: 60%;
+            border-top-color: #fff;
+        }
+
+        .amendment {
+            height: 50px;
+            top: 50% !important;
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body style="background-color: #5c81ff;">
@@ -388,16 +617,98 @@
                     <a class=" slim" title="" href="#">find out more</a>
                 </div>
 
-                <div class="more-find">
-                    <div class="kola-invite">
-                        <p><span>Didn´t find the car you are looking for?</span> Invite your friends to rent
-                            their cars.</p>
-                        <a href="#" title="" class="n facebook"><i class="fa-brands fa-facebook"
-                                style="color: #4f4ed7; font-size: 42px;"></i>Share Car
-                            East with your Friends</a>
+                <div id="carouselExampleControlsNoTouching" class="carousel slide-fade parent" data-bs-touch="false"
+                    data-bs-interval="false">
+
+                    <div class="carousel-inner">
+
+                        <div class="wrapper carousel-item active data-bs-toggle=" tooltip">
+                            <div class="images">
+                                <div class="img-1"></div>
+                                <div class="img-2"></div>
+                            </div>
+                            <div class="slider">
+                                <div class="drag-line">
+                                    <span></span>
+                                </div>
+                                <input type="range" min="0" max="100" value="50">
+                            </div>
+                        </div>
+
+                        <div class="wrapper carousel-item text-start" data-bs-toggle="tooltip">
+                            <div class="images-1">
+                                <div class="img-3"><img src="img/slider-images-33.jpg" alt="" class="amendmentImage"
+                                        width="600"></div>
+                                <div class="img-4"></div>
+                            </div>
+                            <div class="slider-1">
+                                <div class="drag-line-1">
+                                    <span></span>
+                                </div>
+                                <input type="range" min="0" max="100" value="50">
+                            </div>
+                        </div>
+
+                        <div class="wrapper carousel-item text-start" data-bs-toggle="tooltip">
+                            <div class="images-2">
+                                <div class="img-5"></div>
+                                <div class="img-6"></div>
+                            </div>
+                            <div class="slider-2">
+                                <div class="drag-line-2">
+                                    <span></span>
+                                </div>
+                                <input type="range" min="0" max="100" value="50">
+                            </div>
+                        </div>
+
+                        <div class="wrapper carousel-item text-start" data-bs-toggle="tooltip">
+                            <div class="images-3">
+                                <div class="img-7">
+                                    <img src="img/slider-images-7.jpeg" class="amendmentImage" width="600" alt="">
+                                </div>
+                                <div class="img-8"></div>
+                            </div>
+                            <div class="slider-3">
+                                <div class="drag-line-3">
+                                    <span></span>
+                                </div>
+                                <input type="range" min="0" max="100" value="50">
+                            </div>
+                        </div>
+
+                        <div class="wrapper carousel-item text-start" data-bs-toggle="tooltip">
+                            <div class="images-4">
+                                <div class="img-9">
+                                    <img src="img/slider-images-9.jpg" class="amendmentImage" width="600" alt="">
+                                </div>
+                                <div class="img-10"></div>
+                            </div>
+                            <div class="slider-4">
+                                <div class="drag-line-4">
+                                    <span></span>
+                                </div>
+                                <input type="range" min="0" max="100" value="50">
+                            </div>
+                        </div>
+
                     </div>
 
+                    <button class="carousel-control-prev amendment" type="button"
+                        data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" style="color: black;" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+
+                    <button class="carousel-control-next amendment" type="button"
+                        data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" style="color: black;" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+
+
                 </div>
+
 
             </div>
 
@@ -465,8 +776,8 @@
                                     <p class="stylep">Pickup</p>
                                 </a></li>
 
-                            <li class="newstyle"><a href="#read-about-Van" title=""><img calss="img-fluid" src="img/mockup-9.png"
-                                        alt="">
+                            <li class="newstyle"><a href="#read-about-Van" title=""><img calss="img-fluid"
+                                        src="img/mockup-9.png" alt="">
                                     <p class="stylep">Van</p>
                                 </a></li>
 
@@ -911,9 +1222,10 @@
 
                     <div class="carinf">
 
-                        <h5><a title="" href="#">Factory produced pickup trucks from Chevrolet entered the markets<span>1931 to 1935</span>
+                        <h5><a title="" href="#">Factory produced pickup trucks from Chevrolet entered the
+                                markets<span>1931 to 1935</span>
                             </a></h5>
-                        <p>Toyota entered the pickup truck manufacturing game with 
+                        <p>Toyota entered the pickup truck manufacturing game with
                             the model G1 pickup truck. It was during the 30s that everything changed</p>
 
                         <span class="locatio"><i class="fa fa-location-arrow"></i>
@@ -942,8 +1254,9 @@
 
                     <div class="car-inf ">
                         <h5 class="h55my"><a title="" href="#">
-                            Not to be left behind, the Chrysler Corporation manufactured the half-ton Dodge pickup truck, the first of its kind. 
-                            <span>1929</span></a></h5>
+                                Not to be left behind, the Chrysler Corporation manufactured the half-ton Dodge pickup
+                                truck, the first of its kind.
+                                <span>1929</span></a></h5>
 
                         <p>We’re told electric pickups will be the next big thing: The Tesla Cybertruck, the Ford F-150
                             Lightning and the GMC Hummer EV are online and on their way</p>
@@ -979,7 +1292,8 @@
 
                     <div class="carinf">
 
-                        <h5><a title="" href="#">2018 Ford Transit Custom 300 Base 2.0 facelift Taken in Stratford-upon-Avon
+                        <h5><a title="" href="#">2018 Ford Transit Custom 300 Base 2.0 facelift Taken in
+                                Stratford-upon-Avon
                             </a></h5>
                         <p>A van is a type of road vehicle used for transporting goods or people</p>
 
@@ -1009,12 +1323,14 @@
 
                     <div class="car-inf ">
                         <h5 class="h55my"><a title="" href="#">
-                            2018 Mercedes-Benz Sprinter 314 CDi 2.1 Front Taken in Leamington Spa </a></h5>
+                                2018 Mercedes-Benz Sprinter 314 CDi 2.1 Front Taken in Leamington Spa </a></h5>
 
-                        <p>The Mercedes-Benz Sprinter is a light commercial vehicle (van) built by Mercedes-Benz Group AG of Stuttgart,</p>
+                        <p>The Mercedes-Benz Sprinter is a light commercial vehicle (van) built by Mercedes-Benz Group
+                            AG of Stuttgart,</p>
 
                         <span class="locatio"><i class="fa fa-location-arrow"></i>
-                            Of course, one of the few happy moments in Van World (and also in the disastrous Daimler-Chrysler merger)
+                            Of course, one of the few happy moments in Van World (and also in the disastrous
+                            Daimler-Chrysler merger)
                         </span>
 
                         <div class="car-owner">
