--- a/footer.html
+++ b/footer.html
@@ -31,6 +31,11 @@
             display: flex;
         }
 
+        .amendmentImage {
+            width: 100%;
+            height: 100%;
+        }
+
         .images .img-1 {
             height: 100%;
             width: 100%;
@@ -47,7 +52,7 @@
         .images-1 .img-3 {
             height: 100%;
             width: 100%;
-            background: url("./img/slider-images-33.jpg") no-repeat;
+            /* background: url("./img/slider-images-33.jpg") no-repeat; */
         }
 
         .images-1 .img-4 {
@@ -73,7 +78,7 @@
         .images-3 .img-7 {
             height: 100%;
             width: 100%;
-            background: url("./img/slider-images-7.jpeg") no-repeat;
+            /* background: url("./img/slider-images-7.jpeg") no-repeat; */
         }
 
         .images-3 .img-8 {
@@ -86,7 +91,7 @@
         .images-4 .img-9 {
             height: 100%;
             width: 100%;
-            background: url("./img/slider-images-9.jpg") no-repeat;
+            /* background: url("./img/slider-images-9.jpg") no-repeat; */
         }
 
         .images-4 .img-10 {
@@ -226,6 +231,12 @@
             left: 60%;
             border-top-color: #fff;
         }
+
+        .amendment {
+            height: 50px;
+            top: 50% !important;
+            background-color: black;
+        }
     </style>
 </head>
 
@@ -250,7 +261,8 @@
 
             <div class="wrapper carousel-item text-start" data-bs-toggle="tooltip">
                 <div class="images-1">
-                    <div class="img-3"></div>
+                    <div class="img-3"><img src="img/slider-images-33.jpg" alt="" class="amendmentImage"
+                        width="600"></div>
                     <div class="img-4"></div>
                 </div>
                 <div class="slider-1">
@@ -276,7 +288,9 @@
 
             <div class="wrapper carousel-item text-start" data-bs-toggle="tooltip">
                 <div class="images-3">
-                    <div class="img-7"></div>
+                    <div class="img-7">
+                        <img src="img/slider-images-7.jpeg" class="amendmentImage" width="600" alt="">
+                    </div>
                     <div class="img-8"></div>
                 </div>
                 <div class="slider-3">
@@ -289,7 +303,9 @@
 
             <div class="wrapper carousel-item text-start" data-bs-toggle="tooltip">
                 <div class="images-4">
-                    <div class="img-9"></div>
+                    <div class="img-9">
+                        <img src="img/slider-images-9.jpg" class="amendmentImage" width="600" alt="">
+                    </div>
                     <div class="img-10"></div>
                 </div>
                 <div class="slider-4">
@@ -302,15 +318,15 @@
 
         </div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-            data-bs-slide="prev" style="background-color: rgba(0, 0, 0, 0.274); ">
-            <span class="carousel-control-prev-icon" style="color: black;" aria-hidden="true"></span>
+        <button class="carousel-control-prev amendment" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+            data-bs-slide="prev" >
+            <span class="carousel-control-prev-icon"  aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
 
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-            data-bs-slide="next" style="background-color: rgba(0, 0, 0, 0.274);">
-            <span class="carousel-control-next-icon" style="color: black;" aria-hidden="true"></span>
+        <button class="carousel-control-next amendment" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+            data-bs-slide="next" >
+            <span class="carousel-control-next-icon"  aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
 
