--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css.map">
     <title>Image Comparison Slider | CodingNepal</title>
     <style>
-
         .wrapper {
             position: relative;
             height: 400px;
@@ -18,7 +17,7 @@
             background: #fff;
             border: 7px solid #fff;
             box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
-            transform: translate(45% , 0);
+            transform: translate(45%, 0);
         }
 
         .images,
@@ -242,7 +241,8 @@
 
 <body>
 
-    <div id="carouselExampleControlsNoTouching" class="carousel slide parent" data-bs-touch="false" data-bs-interval="false">
+    <div id="carouselExampleControlsNoTouching" class="carousel slide parent" data-bs-touch="false"
+        data-bs-interval="false">
 
         <div class="carousel-inner">
 
@@ -261,8 +261,8 @@
 
             <div class="wrapper carousel-item text-start" data-bs-toggle="tooltip">
                 <div class="images-1">
-                    <div class="img-3"><img src="img/slider-images-33.jpg" alt="" class="amendmentImage"
-                        width="600"></div>
+                    <div class="img-3"><img src="img/slider-images-33.jpg" alt="" class="amendmentImage" width="600">
+                    </div>
                     <div class="img-4"></div>
                 </div>
                 <div class="slider-1">
@@ -318,15 +318,15 @@
 
         </div>
 
-        <button class="carousel-control-prev amendment" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-            data-bs-slide="prev" >
-            <span class="carousel-control-prev-icon"  aria-hidden="true"></span>
+        <button class="carousel-control-prev amendment" type="button"
+            data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
 
-        <button class="carousel-control-next amendment" type="button" data-bs-target="#carouselExampleControlsNoTouching"
-            data-bs-slide="next" >
-            <span class="carousel-control-next-icon"  aria-hidden="true"></span>
+        <button class="carousel-control-next amendment" type="button"
+            data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
 
@@ -394,7 +394,25 @@
             img4.style.width = sliderVal4 + "%";
         }
 
-    </script>
+    </script> 
+
+    <!-- <script>
+        function handleSliderInput(slider, img, dragLine) {
+            slider.oninput = () => {
+                let sliderVal = slider.value;
+                dragLine.style.left = sliderVal + "%";
+                img.style.width = sliderVal + "%";
+            };
+        }
+
+        const sliders = document.querySelectorAll(".slider input");
+        const images = document.querySelectorAll(".images .img");
+        const dragLines = document.querySelectorAll(".slider .drag-line");
+
+        sliders.forEach((slider, index) => {
+            handleSliderInput(slider, images[index], dragLines[index]);
+        });
+    </script>!-->
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
