--- a/Models-Cars.html
+++ b/Models-Cars.html
@@ -1013,6 +1013,44 @@
 
                         </div>
 
+                        <div class="col-lg-4 col-md-4 col-sm-6 text-center">
+
+                            <li class="newstyle"><a href="#read-about-suv-XC" title=""><img calss="img-fluid"
+                                        src="img/mockup-4.png" alt="">
+                                    <p class="stylep">SUV-XC</p>
+                                </a></li>
+                                <!-- 60,70 -->
+                            <li class="newstyle"><a href="#read-about-Ford" title=""><img calss="img-fluid"
+                                        src="img/mockup-5.png" alt="">
+                                    <p class="stylep">Ford</p>
+                                </a></li>
+                                <!-- F-150 SVT Raptor,Focus Gr.B Rally Car	 -->
+                            <li class="newstyle"><a href="#read-about-Gran-Turismo" title=""><img calss="img-fluid"
+                                        src="img/mockup-6.png" alt="">
+                                    <p class="stylep">Gran-Turismo</p>
+                                </a></li>
+                                <!-- Gran Turismo Red Bull X2014 Junior , Gran Turismo Red Bull X2014 Standard -->
+                        </div>
+
+                        <div class="col-lg-4 col-md-4 col-sm-6 text-center">
+
+                            <li class="newstyle"><a href="#read-about-Jaguar" title=""><img calss="img-fluid"
+                                        src="img/mockup-4.png" alt="">
+                                    <p class="stylep">Jaguar</p>
+                                </a></li>
+                                <!-- D-type,F-type Gr.3 -->
+                            <li class="newstyle"><a href="#read-Dodge" title=""><img calss="img-fluid"
+                                        src="img/mockup-5.png" alt="">
+                                    <p class="stylep">Dodge</p>
+                                </a></li>
+                                <!-- SRT Tomahawk S Vision Gran Turismo,
+                                    SRT Tomahawk GTS-R Vision Gran Turismo	 -->
+                            <li class="newstyle"><a href="#read-about-Zagato" title=""><img calss="img-fluid"
+                                        src="img/mockup-6.png" alt="">
+                                    <p class="stylep">Zagato</p>
+                                </a></li>
+                                <!-- Gran Turismo Red Bull X2014 Junior , Gran Turismo Red Bull X2014 Standard -->
+                        </div>
                     </ul>
 
                 </div>
